--- a/css/question.css
+++ b/css/question.css
@@ -2,7 +2,7 @@
   background: #46DBC2;
   color: #fff;
   width: 400px;
-  margin: 50px auto;
+  margin: 50px auto 0;
   border-radius: 3px;
   box-shadow: 0 0 30px -10px #333;
 }
@@ -11,7 +11,7 @@
   padding: 15px;
 }
 
-.question-block .question-text:first-letter{
+.question-block *:first-letter{
   text-transform: uppercase;
 }
 
@@ -36,7 +36,8 @@
   border-bottom: none;
 }
 
-.question-block .question-button{
+.question-block .question-button,
+.create-question{
   color: #758191;
   background: #fff;
   border: none;
@@ -45,10 +46,17 @@
   padding: 5px 0;
   border-radius: 3px;
   cursor: pointer;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .question-block .question-answers .answer-question:hover,
-.question-block .question-button:hover{
+.question-block .question-button:hover,
+.create-question:hover{
   color: #fff;
   background: #43C3AF;
 }
@@ -57,4 +65,10 @@
   font-size: 30px;
   padding: 20px;
   text-align: center;
+}
+
+.create-question{
+  width: 100%;
+  margin: 10px 0;
+  border: 2px solid #43C3AF;
 }
