--- a/css/question.css
+++ b/css/question.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Open Sans Light'),
+    local('OpenSans-Light'),
+    url('font/Open Sans.woff2') format('woff2'),
+    url('font/Open Sans.woff') format('woff'),
+    url('font/OpenSans-Light.ttf') format('ttf');
+}
+
 *{
   margin: 0;
   padding: 0;
