--- a/css/question.css
+++ b/css/question.css
@@ -14,6 +14,7 @@
   padding: 0;
   font-size: 20px;
   font-family: 'Open Sans', sans-serif;
+  transition: background 0.3s ease;
 }
 
 body{
@@ -22,14 +23,55 @@ body{
   margin: 0 auto
 }
 
+.button-main-quetions{
+  text-align: center;
+  padding: 10px 15px;
+  margin: 20px 0;
+  color: #333;
+  cursor: pointer;
+  background: #fff;
+  color: #b2b2b2;
+  box-shadow: 0 0 30px -18px #333;
+}
+
+.button-main-quetions.clear{
+  background: transparent;
+  cursor: default;
+  box-shadow: none;
+}
+
+.button-main-quetions:not(.clear):hover{
+  color: #fff;
+  background: #43C3AF;
+}
+
 .question-block{
   background: #46DBC2;
   color: #fff;
   width: 400px;
-  margin: 50px auto 0;
+  margin: 0 auto;
   border-radius: 3px;
   box-shadow: 0 0 30px -10px #333;
   position: relative;
+}
+
+.question-block.clear{
+  background: transparent;
+  box-shadow: none;
+}
+
+.question-block .main-question{
+  padding: 10px 15px;
+  background: #fff;
+  color: #b2b2b2;
+  margin: 10px 0;
+  box-shadow: 0 0 30px -18px #333;
+  cursor: pointer;
+}
+
+.question-block .main-question:hover{
+  background: #46DBC2;
+  color: #fff;
 }
 
 .question-block .left-button,
